<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_settings"
        android:title="@string/main_menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_sync_hotspot"
        android:title="@string/client_sync_hotspot_config"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_open_wifi"
        android:title="@string/open_wifi_with_manual"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_unpair_controller"
        android:title="@string/unpair_or_reset_controller"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_full_console"
        android:title="@string/main_menu_full_console"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_rerun_onboarding"
        android:title="@string/main_menu_rerun_onboarding"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_project_tools"
        android:title="@string/main_menu_project_tools"
        app:showAsAction="never" />
</menu>
